# jules-idea-automation

./: .coverage  .env.example  .flake8  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  bandit.yaml  black_report.txt  conftest.py  fix_newlines.py  flake8_final.txt  flake8_report.txt  flake8_verification.txt  isort_report.txt  main.py  mypy.ini  ockham.md  plan.md  plan_fix.md  plan_idea.md  pylint_report.json  pyproject.toml  pyrightconfig.json  radon_complexity.txt  radon_maintainability.txt  refactor_progress.txt  requirements.in  requirements.txt  tool.py
.Jules/: ockham.md  palette.md
.github/: dependabot.yml
.github/workflows/: ci.yml  security.yml
.jules/: sentinel.md
agent/config/: architect.config.json  coder.config.json  deliverer.config.json  engineer.config.json  mason.config.json
agent/progress/: CODER_PROGRESS.txt  ENGINEER_PROGRESS.txt
agent/prompts/: architect_prompt.md  coder_prompt.md  deliverer_prompt.md  engineer_prompt.md  mason_prompt.md
agent/reports/: DELIVERER_REPORT.md  MASON_REPORT.md
agent/scripts/: repro_injection.py  run_architect.sh  run_coder.sh  run_deliverer.sh  run_engineer.sh  run_mason.sh  run_pipeline.sh
docs/: ARCHITECTURE.md  CONTEXT_HEALTH.md  DEVLOG.md  GUARDRAILS.md  PRD.md  ROADMAP.md  SUCCESS_CRITERIA.md  architecture.md
scripts/: docstring_checker.py
src/: gemini_client.py  github_client.py  jules_client.py  scraper.py
src/adapters/: __init__.py
src/cli/: __init__.py  _shared.py  cmd_agent.py  cmd_list.py  cmd_manual.py  cmd_paste.py  cmd_watch.py  cmd_website.py  commands.py  parser.py
src/core/: bus.py  events.py  interfaces.py  models.py  readme_builder.py  workflow.py
src/services/: __init__.py  audit.py  bus.py  cache.py  db.py  event_bus.py  gemini.py  github.py  http_client.py  jules.py  reporting.py  repository.py  scraper.py  templates.py
src/templates/: __init__.py  agent_ready.py  feature_map.py
src/utils/: config.py  errors.py  guide.py  polling.py  reporter.py  resilience.py  security.py  slugify.py
tests/: conftest.py  test_audit.py  test_duration.py  test_gemini_security.py  test_gemini_security_fix.py  test_main_errors.py  test_resilience_integration.py  test_smoke.py  trace_test__fetch_from_api.py  trace_test__fetch_response.py  trace_test__normalize_requirements.py  trace_test_extract_text.py  trace_test_fetch_from_api.py  trace_test_fetch_response.py  trace_test_gemini_client__fetch_from_api.py  trace_test_gemini_fetch_from_api.py  trace_test_gemini_generate_content.py  trace_test_generate_scaffold.py  trace_test_is_session_complete.py  trace_test_map_api_error.py  trace_test_poll_with_result.py  trace_test_prepare_scaffold_files.py  trace_test_print_demo_report.py  trace_test_workflow.py  trace_test_workflow_execute.py  trace_test_workflow_generate_scaffold.py
tests/cli/: test_cmd_list.py  test_commands.py  test_commands_demo.py  test_commands_extra.py  (+3 more)
website/: index.html  script.js  styles.css
(+39 files in other folders)
