[project]
name = "jules-idea-automation"
version = "1.0.0"
description = "CLI tool for automating idea generation, repo creation, and Jules session initialization."
requires-python = ">=3.9"
license = "MIT"
readme = "README.md"

[project.urls]
Repository = "https://github.com/julesjewels-ai/jules-idea-automation"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = "3.10"
ignore_missing_imports = true
strict = true
explicit_package_bases = true

[tool.pytest.ini_options]
testpaths = ["tests"]

